src/sass/collections-slider.scss
.collections-slider {
  position: relative;
  margin-top: -12em;

  .slider {
    padding-top: 12em;
  }

  .bullets-container {
    position: absolute;
    right: 0;
    bottom: 9em;
    left: 0;
    margin: 0 auto;
    padding: 3em;
    max-width: 100em;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    pointer-events: none;
    @media (max-width: 768px) {
      display: none;
    }

    .slider-bullet {
      width: 1.8em;
      height: 1.8em;
      border: 1px solid transparent;
      display: flex;
      align-items: center;
      justify-content: center;
      border-radius: 50%;
      margin-top: 0.5em;
      transition: 0.3s;
      cursor: pointer;
      pointer-events: all;

      &.hovered {
        border-color: #fff5;
      }

      &.active {
        border-color: #fff;
      }
    }
  }

  .slider-arrows {
    top: 12em;
    margin-top: 0;

    @media (max-width: 768px) {
      top: 4em;
      margin-top: 125%;
    }

    @media (max-width: 450px) {
      margin-top: 112%;
    }

    .arrow-left,
    .arrow-right {
      transition: 0.3s;
      svg {
        background-color: transparent;
      }
    }
  }
}

.collection-others-title-mobile {
  text-transform: uppercase;
  color: #fff;
  letter-spacing: $letter-spacing;
  text-align: center;
  font-size: 1.5em;
  margin: 0 auto;
}

.single-collection {
  .collection-image-column {
    width: 60%;
    @media (max-width: 900px) {
      width: 50%;
    }
  }

  .collection-description-column {
    position: relative;
    width: 40%;
    padding-right: 6em;
    padding-top: 10em;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    @media (max-width: 768px) {
      padding-top: 0;
    }

    .collection-number {
      text-transform: uppercase;
      letter-spacing: $letter-spacing;
      @media (max-width: 768px) {
        text-align: center;
      }
    }

    .collection-others-title {
      text-transform: uppercase;
      color: #fff;
      letter-spacing: $letter-spacing;
      position: absolute;
      top: 3em;
    }

    .collection-title {
      font-size: 8em;
      margin-left: -1.15em;
      @media (max-width: 1200px) {
        font-size: 5em;
      }
      @media (max-width: 768px) {
        margin-left: 0;
        text-align: center;
      }
    }
  }

  .button-container {
    @media (max-width: 768px) {
      text-align: center;
    }
  }
}

